--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "aos": "^2.3.4",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.4",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
