--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/aos/dist/aos.js"
+              "node_modules/aos/dist/aos.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
