--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "aos": "^2.3.4",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.4",
     "tslib": "^2.3.0",
