--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "aos": "^2.3.4",
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.4",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.4.4",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "sweetalert2": "^11.7.3",
+    "tslib": "^2.5.0",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
@@ -36,7 +36,7 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
