--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha2",
     "jquery": "^3.6.4",
     "openai": "^3.2.1",
@@ -36,8 +35,8 @@
     "@angular-devkit/build-angular": "^13.3.11",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
-    "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
+    "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^12.20.55",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
