--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bootstrap": "^5.3.0-alpha2",
+    "gsap": "^3.11.5",
     "jquery": "^3.6.4",
     "openai": "^3.2.1",
     "rxjs": "~7.5.0",
