--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "bootstrap": "^5.3.0-alpha2",
     "gsap": "^3.11.5",
     "jquery": "^3.6.4",
-    "ng-recaptcha": "^12.0.1",
     "openai": "^3.2.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
@@ -41,6 +40,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^12.20.55",
+    "@types/slick-carousel": "^1.6.37",
     "@types/three": "^0.152.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
